--- a/source/scss/pixel-icon-design/base.scss
+++ b/source/scss/pixel-icon-design/base.scss
@@ -47,9 +47,145 @@
 
 
                 5px 60px rgb(237, 125, 49),
+                5px 65px rgb(237, 125, 49),
+                5px 70px rgb(237, 125, 49),
+                5px 75px rgb(237, 125, 49),
+                5px 80px rgb(237, 125, 49),
+                10px 50px rgb(237, 125, 49),
+                10px 55px rgb(237, 125, 49),
+                10px 60px rgb(237, 125, 49),
+                10px 75px rgb(237, 125, 49),
+                10px 80px rgb(237, 125, 49),
+                10px 85px rgb(237, 125, 49),
+                10px 90px rgb(237, 125, 49),
+
+                15px 40px rgb(237, 125, 49),
+                15px 45px rgb(237, 125, 49),
+                15px 50px rgb(237, 125, 49),
+                15px 85px rgb(237, 125, 49),
+                15px 90px rgb(237, 125, 49),
+                15px 95px rgb(237, 125, 49),
+                20px 35px rgb(237, 125, 49),
+                20px 40px rgb(237, 125, 49),
+                20px 45px rgb(237, 125, 49),
+                20px 95px rgb(237, 125, 49),
+                20px 100px rgb(237, 125, 49),
+
+                25px 30px rgb(237, 125, 49),
+                25px 35px rgb(237, 125, 49),
+                25px 40px rgb(237, 125, 49),
+                25px 100px rgb(237, 125, 49),
+                25px 105px rgb(237, 125, 49),
+
+                30px 30px rgb(237, 125, 49),
+                30px 35px rgb(237, 125, 49),
+                30px 105px rgb(237, 125, 49),
+                35px 35px rgb(237, 125, 49),
+                35px 40px rgb(237, 125, 49),
+                35px 105px rgb(237, 125, 49),
+                35px 110px rgb(237, 125, 49),
+                40px 40px rgb(237, 125, 49),
+                40px 100px rgb(237, 125, 49),
+                40px 105px rgb(237, 125, 49),
+                40px 110px rgb(237, 125, 49),
+                45px 40px rgb(237, 125, 49),
+                45px 100px rgb(237, 125, 49),
+                45px 105px rgb(237, 125, 49),
+                45px 110px rgb(237, 125, 49),
+                45px 115px rgb(237, 125, 49),
+
+                50px 30px rgb(237, 125, 49),
+                50px 35px rgb(237, 125, 49),
+                50px 40px rgb(237, 125, 49),
+                50px 95px rgb(237, 125, 49),
+                50px 100px rgb(237, 125, 49),
+                50px 105px rgb(237, 125, 49),
+                50px 110px rgb(237, 125, 49),
+                50px 115px rgb(237, 125, 49),
+                55px 25px rgb(237, 125, 49),
+                55px 30px rgb(237, 125, 49),
+                55px 35px rgb(237, 125, 49),
+                55px 95px rgb(237, 125, 49),
+                55px 100px rgb(237, 125, 49),
+                55px 105px rgb(237, 125, 49),
+                55px 110px rgb(237, 125, 49),
+                55px 115px rgb(237, 125, 49),
+                60px 25px rgb(237, 125, 49),
+                60px 30px rgb(237, 125, 49),
+                60px 90px rgb(237, 125, 49),
+                60px 95px rgb(237, 125, 49),
+                60px 100px rgb(237, 125, 49),
+                60px 105px rgb(237, 125, 49),
+                60px 110px rgb(237, 125, 49),
+
+                65px 25px rgb(237, 125, 49),
+                65px 30px rgb(237, 125, 49),
+                65px 90px rgb(237, 125, 49),
+                65px 95px rgb(237, 125, 49),
+                65px 100px rgb(237, 125, 49),
+                65px 105px rgb(237, 125, 49),
+                65px 110px rgb(237, 125, 49),
+                70px 30px rgb(237, 125, 49),
+                70px 35px rgb(237, 125, 49),
+                70px 85px rgb(237, 125, 49),
+                70px 90px rgb(237, 125, 49),
+                70px 95px rgb(237, 125, 49),
+                70px 100px rgb(237, 125, 49),
+                70px 105px rgb(237, 125, 49),
+                75px 30px rgb(237, 125, 49),
+                75px 35px rgb(237, 125, 49),
+                75px 40px rgb(237, 125, 49),
+                75px 80px rgb(237, 125, 49),
+                75px 85px rgb(237, 125, 49),
+                75px 90px rgb(237, 125, 49),
+                75px 95px rgb(237, 125, 49),
+                75px 100px rgb(237, 125, 49),
+                75px 105px rgb(237, 125, 49),
+
+                80px 35px rgb(237, 125, 49),
+                80px 40px rgb(237, 125, 49),
+                80px 45px rgb(237, 125, 49),
+                80px 75px rgb(237, 125, 49),
+                80px 80px rgb(237, 125, 49),
+                80px 85px rgb(237, 125, 49),
+                80px 90px rgb(237, 125, 49),
+                80px 95px rgb(237, 125, 49),
+                80px 100px rgb(237, 125, 49),
+                85px 40px rgb(237, 125, 49),
+                85px 45px rgb(237, 125, 49),
+                85px 50px rgb(237, 125, 49),
+                85px 65px rgb(237, 125, 49),
+                85px 70px rgb(237, 125, 49),
+                85px 75px rgb(237, 125, 49),
+                85px 80px rgb(237, 125, 49),
+                85px 85px rgb(237, 125, 49),
+                85px 90px rgb(237, 125, 49),
+                85px 95px rgb(237, 125, 49),
+
+                90px 50px rgb(237, 125, 49),
+                90px 55px rgb(237, 125, 49),
+                90px 60px rgb(237, 125, 49),
+                90px 65px rgb(237, 125, 49),
+                90px 70px rgb(237, 125, 49),
+                90px 75px rgb(237, 125, 49),
+                90px 80px rgb(237, 125, 49),
+                90px 85px rgb(237, 125, 49),
+                90px 90px rgb(237, 125, 49),
+
+                25px 10px rgb(131, 60, 12),
+                25px 15px rgb(131, 60, 12),
+                30px 20px rgb(131, 60, 12),
+                30px 25px rgb(131, 60, 12),
+                35px 25px rgb(131, 60, 12),
+                35px 30px rgb(131, 60, 12),
+                40px 30px rgb(131, 60, 12),
+                40px 35px rgb(131, 60, 12),
+                45px 35px rgb(131, 60, 12),
+
                 95px 60px rgb(237, 125, 49),
-
-
-                45px 115px rgb(198, 89, 17);
+                95px 65px rgb(237, 125, 49),
+                95px 70px rgb(237, 125, 49),
+                95px 75px rgb(237, 125, 49),
+                95px 80px rgb(237, 125, 49);
   }
 }
