--- a/source/scss/pixel-icon-design/base.scss
+++ b/source/scss/pixel-icon-design/base.scss
@@ -186,6 +186,16 @@
                 95px 65px rgb(237, 125, 49),
                 95px 70px rgb(237, 125, 49),
                 95px 75px rgb(237, 125, 49),
-                95px 80px rgb(237, 125, 49);
+                95px 80px rgb(237, 125, 49),
+
+
+                25px 55px rgb(248, 203, 173),
+                25px 60px rgb(248, 203, 173),
+                25px 65px rgb(248, 203, 173),
+                25px 70px rgb(248, 203, 173),
+                30px 50px rgb(248, 203, 173),
+                30px 55px rgb(248, 203, 173),
+                30px 60px rgb(248, 203, 173),
+                30px 65px rgb(248, 203, 173);
   }
 }
