--- a/source/scss/pixel-icon-design/base.scss
+++ b/source/scss/pixel-icon-design/base.scss
@@ -8,7 +8,6 @@
   &::before {
     content: "";
     position: absolute;
-    background: 0 0;
     width: 5px;
     height: 5px;
     top: -5px;
@@ -27,175 +26,10 @@
   &::before {
     content: "";
     position: absolute;
-    background-color: black;
     width: 5px;
     height: 5px;
     top: -5px;
     left: -5px;
-    box-shadow: 50px 5px rgb(112, 173, 71),
-                45px 10px rgb(112, 173, 71),
-                50px 10px rgb(112, 173, 71),
-                45px 15px rgb(112, 173, 71),
-                50px 15px rgb(112, 173, 71),
-                40px 20px rgb(112, 173, 71),
-                45px 20px rgb(112, 173, 71),
-                50px 20px rgb(112, 173, 71),
-                40px 25px rgb(112, 173, 71),
-                45px 25px rgb(112, 173, 71),
-                50px 25px rgb(112, 173, 71),
-                45px 30px rgb(112, 173, 71),
-
-
-                5px 60px rgb(237, 125, 49),
-                5px 65px rgb(237, 125, 49),
-                5px 70px rgb(237, 125, 49),
-                5px 75px rgb(237, 125, 49),
-                5px 80px rgb(237, 125, 49),
-                10px 50px rgb(237, 125, 49),
-                10px 55px rgb(237, 125, 49),
-                10px 60px rgb(237, 125, 49),
-                10px 75px rgb(237, 125, 49),
-                10px 80px rgb(237, 125, 49),
-                10px 85px rgb(237, 125, 49),
-                10px 90px rgb(237, 125, 49),
-
-                15px 40px rgb(237, 125, 49),
-                15px 45px rgb(237, 125, 49),
-                15px 50px rgb(237, 125, 49),
-                15px 85px rgb(237, 125, 49),
-                15px 90px rgb(237, 125, 49),
-                15px 95px rgb(237, 125, 49),
-                20px 35px rgb(237, 125, 49),
-                20px 40px rgb(237, 125, 49),
-                20px 45px rgb(237, 125, 49),
-                20px 95px rgb(237, 125, 49),
-                20px 100px rgb(237, 125, 49),
-
-                25px 30px rgb(237, 125, 49),
-                25px 35px rgb(237, 125, 49),
-                25px 40px rgb(237, 125, 49),
-                25px 100px rgb(237, 125, 49),
-                25px 105px rgb(237, 125, 49),
-
-                30px 30px rgb(237, 125, 49),
-                30px 35px rgb(237, 125, 49),
-                30px 105px rgb(237, 125, 49),
-                35px 35px rgb(237, 125, 49),
-                35px 40px rgb(237, 125, 49),
-                35px 105px rgb(237, 125, 49),
-                35px 110px rgb(237, 125, 49),
-                40px 40px rgb(237, 125, 49),
-                40px 100px rgb(237, 125, 49),
-                40px 105px rgb(237, 125, 49),
-                40px 110px rgb(237, 125, 49),
-                45px 40px rgb(237, 125, 49),
-                45px 100px rgb(237, 125, 49),
-                45px 105px rgb(237, 125, 49),
-                45px 110px rgb(237, 125, 49),
-                45px 115px rgb(237, 125, 49),
-
-                50px 30px rgb(237, 125, 49),
-                50px 35px rgb(237, 125, 49),
-                50px 40px rgb(237, 125, 49),
-                50px 95px rgb(237, 125, 49),
-                50px 100px rgb(237, 125, 49),
-                50px 105px rgb(237, 125, 49),
-                50px 110px rgb(237, 125, 49),
-                50px 115px rgb(237, 125, 49),
-                55px 25px rgb(237, 125, 49),
-                55px 30px rgb(237, 125, 49),
-                55px 35px rgb(237, 125, 49),
-                55px 95px rgb(237, 125, 49),
-                55px 100px rgb(237, 125, 49),
-                55px 105px rgb(237, 125, 49),
-                55px 110px rgb(237, 125, 49),
-                55px 115px rgb(237, 125, 49),
-                60px 25px rgb(237, 125, 49),
-                60px 30px rgb(237, 125, 49),
-                60px 90px rgb(237, 125, 49),
-                60px 95px rgb(237, 125, 49),
-                60px 100px rgb(237, 125, 49),
-                60px 105px rgb(237, 125, 49),
-                60px 110px rgb(237, 125, 49),
-
-                65px 25px rgb(237, 125, 49),
-                65px 30px rgb(237, 125, 49),
-                65px 90px rgb(237, 125, 49),
-                65px 95px rgb(237, 125, 49),
-                65px 100px rgb(237, 125, 49),
-                65px 105px rgb(237, 125, 49),
-                65px 110px rgb(237, 125, 49),
-                70px 30px rgb(237, 125, 49),
-                70px 35px rgb(237, 125, 49),
-                70px 85px rgb(237, 125, 49),
-                70px 90px rgb(237, 125, 49),
-                70px 95px rgb(237, 125, 49),
-                70px 100px rgb(237, 125, 49),
-                70px 105px rgb(237, 125, 49),
-                75px 30px rgb(237, 125, 49),
-                75px 35px rgb(237, 125, 49),
-                75px 40px rgb(237, 125, 49),
-                75px 80px rgb(237, 125, 49),
-                75px 85px rgb(237, 125, 49),
-                75px 90px rgb(237, 125, 49),
-                75px 95px rgb(237, 125, 49),
-                75px 100px rgb(237, 125, 49),
-                75px 105px rgb(237, 125, 49),
-
-                80px 35px rgb(237, 125, 49),
-                80px 40px rgb(237, 125, 49),
-                80px 45px rgb(237, 125, 49),
-                80px 75px rgb(237, 125, 49),
-                80px 80px rgb(237, 125, 49),
-                80px 85px rgb(237, 125, 49),
-                80px 90px rgb(237, 125, 49),
-                80px 95px rgb(237, 125, 49),
-                80px 100px rgb(237, 125, 49),
-                85px 40px rgb(237, 125, 49),
-                85px 45px rgb(237, 125, 49),
-                85px 50px rgb(237, 125, 49),
-                85px 65px rgb(237, 125, 49),
-                85px 70px rgb(237, 125, 49),
-                85px 75px rgb(237, 125, 49),
-                85px 80px rgb(237, 125, 49),
-                85px 85px rgb(237, 125, 49),
-                85px 90px rgb(237, 125, 49),
-                85px 95px rgb(237, 125, 49),
-
-                90px 50px rgb(237, 125, 49),
-                90px 55px rgb(237, 125, 49),
-                90px 60px rgb(237, 125, 49),
-                90px 65px rgb(237, 125, 49),
-                90px 70px rgb(237, 125, 49),
-                90px 75px rgb(237, 125, 49),
-                90px 80px rgb(237, 125, 49),
-                90px 85px rgb(237, 125, 49),
-                90px 90px rgb(237, 125, 49),
-
-                25px 10px rgb(131, 60, 12),
-                25px 15px rgb(131, 60, 12),
-                30px 20px rgb(131, 60, 12),
-                30px 25px rgb(131, 60, 12),
-                35px 25px rgb(131, 60, 12),
-                35px 30px rgb(131, 60, 12),
-                40px 30px rgb(131, 60, 12),
-                40px 35px rgb(131, 60, 12),
-                45px 35px rgb(131, 60, 12),
-
-                95px 60px rgb(237, 125, 49),
-                95px 65px rgb(237, 125, 49),
-                95px 70px rgb(237, 125, 49),
-                95px 75px rgb(237, 125, 49),
-                95px 80px rgb(237, 125, 49),
-
-
-                25px 55px rgb(248, 203, 173),
-                25px 60px rgb(248, 203, 173),
-                25px 65px rgb(248, 203, 173),
-                25px 70px rgb(248, 203, 173),
-                30px 50px rgb(248, 203, 173),
-                30px 55px rgb(248, 203, 173),
-                30px 60px rgb(248, 203, 173),
-                30px 65px rgb(248, 203, 173);
+    box-shadow: 50px 5px rgb(112, 173, 71), 45px 10px rgb(112, 173, 71), 50px 10px rgb(112, 173, 71), 45px 15px rgb(112, 173, 71), 50px 15px rgb(112, 173, 71), 40px 20px rgb(112, 173, 71), 45px 20px rgb(112, 173, 71), 50px 20px rgb(112, 173, 71), 40px 25px rgb(112, 173, 71), 45px 25px rgb(112, 173, 71), 50px 25px rgb(112, 173, 71), 45px 30px rgb(112, 173, 71), 5px 60px rgb(237, 125, 49), 5px 65px rgb(237, 125, 49), 5px 70px rgb(237, 125, 49), 5px 75px rgb(237, 125, 49), 10px 50px rgb(237, 125, 49), 10px 55px rgb(237, 125, 49), 10px 60px rgb(237, 125, 49), 10px 75px rgb(237, 125, 49), 10px 80px rgb(237, 125, 49), 10px 85px rgb(237, 125, 49), 15px 40px rgb(237, 125, 49), 15px 45px rgb(237, 125, 49), 15px 50px rgb(237, 125, 49), 15px 85px rgb(237, 125, 49), 15px 90px rgb(237, 125, 49), 15px 95px rgb(237, 125, 49), 20px 35px rgb(237, 125, 49), 20px 40px rgb(237, 125, 49), 20px 45px rgb(237, 125, 49), 20px 95px rgb(237, 125, 49), 20px 100px rgb(237, 125, 49), 25px 30px rgb(237, 125, 49), 25px 35px rgb(237, 125, 49), 25px 40px rgb(237, 125, 49), 25px 100px rgb(237, 125, 49), 25px 105px rgb(237, 125, 49), 30px 30px rgb(237, 125, 49), 30px 35px rgb(237, 125, 49), 30px 105px rgb(237, 125, 49), 35px 35px rgb(237, 125, 49), 35px 40px rgb(237, 125, 49), 35px 105px rgb(237, 125, 49), 35px 110px rgb(237, 125, 49), 40px 40px rgb(237, 125, 49), 40px 105px rgb(237, 125, 49), 40px 110px rgb(237, 125, 49), 45px 40px rgb(237, 125, 49), 45px 105px rgb(237, 125, 49), 45px 110px rgb(237, 125, 49), 45px 115px rgb(237, 125, 49), 50px 30px rgb(237, 125, 49), 50px 35px rgb(237, 125, 49), 50px 40px rgb(237, 125, 49), 50px 100px rgb(237, 125, 49), 50px 105px rgb(237, 125, 49), 50px 110px rgb(237, 125, 49), 50px 115px rgb(237, 125, 49), 55px 25px rgb(237, 125, 49), 55px 30px rgb(237, 125, 49), 55px 35px rgb(237, 125, 49), 55px 100px rgb(237, 125, 49), 55px 105px rgb(237, 125, 49), 55px 110px rgb(237, 125, 49), 55px 115px rgb(237, 125, 49), 60px 25px rgb(237, 125, 49), 60px 30px rgb(237, 125, 49), 60px 95px rgb(237, 125, 49), 60px 100px rgb(237, 125, 49), 60px 105px rgb(237, 125, 49), 60px 110px rgb(237, 125, 49), 65px 25px rgb(237, 125, 49), 65px 30px rgb(237, 125, 49), 65px 95px rgb(237, 125, 49), 65px 100px rgb(237, 125, 49), 65px 105px rgb(237, 125, 49), 65px 110px rgb(237, 125, 49), 70px 30px rgb(237, 125, 49), 70px 35px rgb(237, 125, 49), 70px 90px rgb(237, 125, 49), 70px 95px rgb(237, 125, 49), 70px 100px rgb(237, 125, 49), 70px 105px rgb(237, 125, 49), 75px 30px rgb(237, 125, 49), 75px 35px rgb(237, 125, 49), 75px 40px rgb(237, 125, 49), 75px 85px rgb(237, 125, 49), 75px 90px rgb(237, 125, 49), 75px 95px rgb(237, 125, 49), 75px 100px rgb(237, 125, 49), 75px 105px rgb(237, 125, 49), 80px 35px rgb(237, 125, 49), 80px 40px rgb(237, 125, 49), 80px 45px rgb(237, 125, 49), 80px 75px rgb(237, 125, 49), 80px 80px rgb(237, 125, 49), 80px 85px rgb(237, 125, 49), 80px 90px rgb(237, 125, 49), 80px 95px rgb(237, 125, 49), 80px 100px rgb(237, 125, 49), 85px 40px rgb(237, 125, 49), 85px 45px rgb(237, 125, 49), 85px 50px rgb(237, 125, 49), 85px 70px rgb(237, 125, 49), 85px 75px rgb(237, 125, 49), 85px 80px rgb(237, 125, 49), 85px 85px rgb(237, 125, 49), 85px 90px rgb(237, 125, 49), 85px 95px rgb(237, 125, 49), 90px 50px rgb(237, 125, 49), 90px 55px rgb(237, 125, 49), 90px 60px rgb(237, 125, 49), 90px 65px rgb(237, 125, 49), 90px 70px rgb(237, 125, 49), 90px 75px rgb(237, 125, 49), 90px 80px rgb(237, 125, 49), 90px 85px rgb(237, 125, 49), 25px 10px rgb(131, 60, 12), 25px 15px rgb(131, 60, 12), 30px 20px rgb(131, 60, 12), 30px 25px rgb(131, 60, 12), 35px 25px rgb(131, 60, 12), 35px 30px rgb(131, 60, 12), 40px 30px rgb(131, 60, 12), 40px 35px rgb(131, 60, 12), 45px 35px rgb(131, 60, 12), 95px 60px rgb(237, 125, 49), 95px 65px rgb(237, 125, 49), 95px 70px rgb(237, 125, 49), 95px 75px rgb(237, 125, 49), 25px 55px rgb(248, 203, 173), 25px 60px rgb(248, 203, 173), 25px 65px rgb(248, 203, 173), 25px 70px rgb(248, 203, 173), 30px 50px rgb(248, 203, 173), 30px 55px rgb(248, 203, 173), 30px 60px rgb(248, 203, 173), 30px 65px rgb(248, 203, 173), 60px 35px rgb(241, 155, 97), 65px 35px rgb(241, 155, 97), 50px 40px rgb(241, 155, 97), 55px 40px rgb(241, 155, 97), 60px 40px rgb(241, 155, 97), 65px 40px rgb(241, 155, 97), 70px 40px rgb(241, 155, 97), 30px 40px rgb(241, 155, 97), 25px 45px rgb(241, 155, 97), 30px 45px rgb(241, 155, 97), 35px 45px rgb(241, 155, 97), 40px 45px rgb(241, 155, 97), 45px 45px rgb(241, 155, 97), 50px 45px rgb(241, 155, 97), 55px 45px rgb(241, 155, 97), 60px 45px rgb(241, 155, 97), 65px 45px rgb(241, 155, 97), 70px 45px rgb(241, 155, 97), 75px 45px rgb(241, 155, 97), 20px 50px rgb(241, 155, 97), 40px 50px rgb(241, 155, 97), 45px 50px rgb(241, 155, 97), 50px 50px rgb(241, 155, 97), 55px 50px rgb(241, 155, 97), 60px 50px rgb(241, 155, 97), 65px 50px rgb(241, 155, 97), 70px 50px rgb(241, 155, 97), 75px 50px rgb(241, 155, 97), 80px 50px rgb(241, 155, 97), 15px 55px rgb(241, 155, 97), 15px 60px rgb(241, 155, 97), 15px 65px rgb(241, 155, 97), 15px 70px rgb(241, 155, 97), 15px 75px rgb(241, 155, 97), 15px 80px rgb(241, 155, 97), 10px 65px rgb(241, 155, 97), 10px 70px rgb(241, 155, 97), 50px 55px rgb(241, 155, 97), 55px 55px rgb(241, 155, 97), 60px 55px rgb(241, 155, 97), 65px 55px rgb(241, 155, 97), 70px 55px rgb(241, 155, 97), 75px 55px rgb(241, 155, 97), 80px 55px rgb(241, 155, 97), 85px 55px rgb(241, 155, 97), 55px 60px rgb(241, 155, 97), 60px 60px rgb(241, 155, 97), 65px 60px rgb(241, 155, 97), 70px 60px rgb(241, 155, 97), 75px 60px rgb(241, 155, 97), 80px 60px rgb(241, 155, 97), 85px 60px rgb(241, 155, 97), 60px 65px rgb(241, 155, 97), 65px 65px rgb(241, 155, 97), 70px 65px rgb(241, 155, 97), 75px 65px rgb(241, 155, 97), 80px 65px rgb(241, 155, 97), 85px 65px rgb(241, 155, 97), 60px 70px rgb(241, 155, 97), 65px 70px rgb(241, 155, 97), 70px 70px rgb(241, 155, 97), 75px 70px rgb(241, 155, 97), 80px 70px rgb(241, 155, 97), 55px 75px rgb(241, 155, 97), 60px 75px rgb(241, 155, 97), 65px 75px rgb(241, 155, 97), 70px 75px rgb(241, 155, 97), 75px 75px rgb(241, 155, 97), 45px 80px rgb(241, 155, 97), 50px 80px rgb(241, 155, 97), 55px 80px rgb(241, 155, 97), 60px 80px rgb(241, 155, 97), 65px 80px rgb(241, 155, 97), 70px 80px rgb(241, 155, 97), 75px 80px rgb(241, 155, 97), 40px 85px rgb(241, 155, 97), 45px 85px rgb(241, 155, 97), 50px 85px rgb(241, 155, 97), 55px 85px rgb(241, 155, 97), 60px 85px rgb(241, 155, 97), 65px 85px rgb(241, 155, 97), 70px 85px rgb(241, 155, 97), 20px 80px rgb(241, 155, 97), 20px 85px rgb(241, 155, 97), 20px 90px rgb(241, 155, 97), 25px 85px rgb(241, 155, 97), 25px 90px rgb(241, 155, 97), 25px 95px rgb(241, 155, 97), 30px 90px rgb(241, 155, 97), 35px 90px rgb(241, 155, 97), 40px 90px rgb(241, 155, 97), 45px 90px rgb(241, 155, 97), 50px 90px rgb(241, 155, 97), 55px 90px rgb(241, 155, 97), 60px 90px rgb(241, 155, 97), 65px 90px rgb(241, 155, 97), 30px 95px rgb(241, 155, 97), 35px 95px rgb(241, 155, 97), 40px 95px rgb(241, 155, 97), 45px 95px rgb(241, 155, 97), 50px 95px rgb(241, 155, 97), 55px 95px rgb(241, 155, 97), 30px 100px rgb(241, 155, 97), 35px 100px rgb(241, 155, 97), 40px 100px rgb(241, 155, 97), 45px 100px rgb(241, 155, 97), 25px 50px rgb(244, 176, 132), 35px 50px rgb(244, 176, 132), 20px 55px rgb(244, 176, 132), 20px 60px rgb(244, 176, 132), 20px 65px rgb(244, 176, 132), 20px 70px rgb(244, 176, 132), 20px 75px rgb(244, 176, 132), 35px 55px rgb(244, 176, 132), 40px 55px rgb(244, 176, 132), 45px 55px rgb(244, 176, 132), 35px 60px rgb(244, 176, 132), 40px 60px rgb(244, 176, 132), 45px 60px rgb(244, 176, 132), 50px 60px rgb(244, 176, 132), 35px 65px rgb(244, 176, 132), 40px 65px rgb(244, 176, 132), 45px 65px rgb(244, 176, 132), 50px 65px rgb(244, 176, 132), 55px 65px rgb(244, 176, 132), 30px 70px rgb(244, 176, 132), 35px 70px rgb(244, 176, 132), 40px 70px rgb(244, 176, 132), 45px 70px rgb(244, 176, 132), 50px 70px rgb(244, 176, 132), 55px 70px rgb(244, 176, 132), 25px 75px rgb(244, 176, 132), 30px 75px rgb(244, 176, 132), 35px 75px rgb(244, 176, 132), 40px 75px rgb(244, 176, 132), 45px 75px rgb(244, 176, 132), 50px 75px rgb(244, 176, 132), 25px 80px rgb(244, 176, 132), 30px 80px rgb(244, 176, 132), 35px 80px rgb(244, 176, 132), 40px 80px rgb(244, 176, 132), 45px 80px rgb(244, 176, 132), 30px 85px rgb(244, 176, 132), 35px 85px rgb(244, 176, 132);
   }
 }
