--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -662,6 +662,73 @@
   }
 }
 
+.shadow-demo {
+  &.demo-1 {
+    position: relative;
+    width: 100%;
+    height: 25rem;
+    background-color: #acaaab;
+    border-radius: 10px;
+    z-index: 9;
+    .shadow-demo-item {
+      &.ellipse-600 {
+        position: absolute;
+        top: 8rem;
+        left: 8rem;
+        width: 3.5rem;
+        height: 10rem;
+        background-color: #f5f3f4;
+        z-index: 10;
+        border-top-left-radius: 50%;
+        border-top-right-radius: 40%;
+        border-bottom-left-radius: 50%;
+        border-bottom-right-radius: 15%;
+        transform: rotate(-35deg);
+        filter: blur(5px);
+      }
+      &.ellipse-700 {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 2rem;
+        height: 150%;
+        background-color: #f5f3f4;
+        z-index: 10;
+        border-radius: 50%;
+        transform: rotate(-35deg);
+        transform-origin: top;
+        filter: blur(5px);
+      }
+      &.ellipse-800 {
+        position: absolute;
+        top: 40%;
+        left: 45%;
+        width: 2rem;
+        height: 60%;
+        background-color: #f5f3f4;
+        z-index: 10;
+        border-radius: 50%;
+        transform: rotate(-35deg);
+        transform-origin: top;
+        filter: blur(5px);
+      }
+      &.ellipse-900 {
+        position: absolute;
+        top: 10%;
+        left: 45%;
+        width: 2rem;
+        height: 20%;
+        background-color: #f5f3f4;
+        z-index: 10;
+        border-radius: 50%;
+        transform: rotate(-35deg);
+        transform-origin: top;
+        filter: blur(5px);
+      }
+    }
+  }
+}
+
 /*to-be-continued*/
 .to-be-continued dot {
   display: inline-block;
