--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -691,7 +691,7 @@
         top: 0;
         left: 50%;
         width: 2rem;
-        height: 150%;
+        height: 125%%;
         background-color: #f5f3f4;
         z-index: 10;
         border-radius: 50%;
