--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -666,10 +666,36 @@
   &.demo-1 {
     position: relative;
     width: 100%;
-    height: 25rem;
-    background-color: #acaaab;
+    height: 50rem;
+    background-color: #484848;
     border-radius: 10px;
     z-index: 9;
+    .card-1 {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 40%;
+      height: 40rem;
+      background-color: #7c7a7b;
+      box-shadow: 2px 2px 5px 0px #1f1f1f;
+      .card-title {
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 36px;
+        font-weight: bold;
+      }
+      .card-footer {
+        position: absolute;
+        bottom: 10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 14px;
+        font-weight: bold;
+      }
+    }
     .shadow-demo-item {
       &.ellipse-600 {
         position: absolute;
@@ -701,16 +727,17 @@
       }
       &.ellipse-800 {
         position: absolute;
-        top: 40%;
+        top: 28%;
         left: 45%;
         width: 2rem;
-        height: 60%;
+        height: 70%;
         background-color: #f5f3f4;
         z-index: 10;
         border-radius: 50%;
         transform: rotate(-35deg);
         transform-origin: top;
         filter: blur(5px);
+        opacity: 0.8;
       }
       &.ellipse-900 {
         position: absolute;
