--- a/source/scss/css-animation-design/base.scss
+++ b/source/scss/css-animation-design/base.scss
@@ -30,7 +30,7 @@
       content: "";
       position: absolute;
       bottom: 0;
-      left: 4rem;
+      left: 3rem;
       width: 3rem;
       height: 3rem;
       border-radius: 5px;
@@ -47,28 +47,55 @@
       height: 3rem;
       border-radius: 5px;
       background-color: gray;
-      animation: jump-demo-2 2.5s infinite ease;
+      animation: jump-demo-2 2.5s infinite linear, jump-demo-2-2 2.5s infinite ease;
     }
     @keyframes jump-demo-1 {
       0%, 100% {
         transform: translateX(0);
       }
       50% {
-        transform: translateX(6rem);
+        transform: translateX(7rem);
       }
     }
     @keyframes jump-demo-2 {
       0% {
         transform: rotate(0);
-        transform-origin: -1.5rem 1rem;
+        transform-origin: -2rem 1rem;
       }
-      50% {
+      30%, 50% {
         transform: rotate(-180deg);
-        transform-origin: -1.5rem 1.5rem;
+        transform-origin: -2rem 1.5rem;
       }
-      100% {
+      80%, 100% {
         transform: rotate(0);
-        transform-origin: -1.5rem 1rem;
+        transform-origin: -2rem 1rem;
+      }
+    }
+    @keyframes jump-demo-2-2 {
+      0%, 30% {
+        width: 3rem;
+        height: 3rem;
+      }
+      32%, 34% {
+        width: 4rem;
+        height: 2rem;
+      }
+      45%, 47% {
+        width: 3rem;
+        height: 3rem;
+      }
+
+      50%, 80% {
+        width: 3rem;
+        height: 3rem;
+      }
+      82%, 84% {
+        width: 4rem;
+        height: 2rem;
+      }
+      95%, 97% {
+        width: 3rem;
+        height: 3rem;
       }
     }
   }
