--- a/themes/oranges/layout/_partial/header.ejs
+++ b/themes/oranges/layout/_partial/header.ejs
@@ -49,7 +49,7 @@
   <!-- fancybox -->
   <link href="https://cdn.bootcss.com/fancybox/3.5.2/jquery.fancybox.min.css" rel="stylesheet">
   <script async src="https://cdn.bootcss.com/fancybox/3.5.2/jquery.fancybox.min.js"></script>
-  <%- js(['/js/fancybox.js', '/js/preload.js']) %>
+  <%- js(['/js/fancybox.js']) %>
 
   <% if(theme.gtag.enable) { %>
     <!-- Global site tag (gtag.js) - Google Analytics -->
