--- a/themes/oranges/layout/_partial/navigation.ejs
+++ b/themes/oranges/layout/_partial/navigation.ejs
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="avatar">
-    <a href="/"><img src="<%- theme.avatar.author_photo %>" alt=""></a>
+    <a href="/"><img no-lazy src="<%- theme.avatar.author_photo %>" alt=""></a>
     <div class="nickname"><a href="/"><%- theme.avatar.author_nickname %></a></div>
   </div>
   <div class="navbar">
