--- a/source/scss/css-animation-design/base.scss
+++ b/source/scss/css-animation-design/base.scss
@@ -96,23 +96,52 @@
       background-color: gray;
       border-radius: 5px;
       transform-origin: center;
-      animation: jump-demo-top-bottom 1.2s infinite ease-in-out;
+      animation: jump-demo-top-bottom 0.8s infinite ease-in-out, jump-demo-rotate 1.5s infinite linear;
     }
     @keyframes jump-demo-top-bottom {
       0% {
-        transform: rotate(0);
-        bottom: -0.5rem;
-      }
-      25%, 70% {
-        // transform: rotate(-180deg);
-        bottom: 4.5rem;
-      }
-      70%, 75% {
         bottom: 5rem;
       }
+      5% {
+        bottom: 4.8rem;
+      }
+      10% {
+        bottom: 4.6rem;
+      }
+      15% {
+        bottom: 4.4rem;
+      }
+      20% {
+        bottom: 4.2rem;
+      }
+      50% {
+        bottom: -1rem;
+      }
+      80% {
+        bottom: 4.2rem;
+      }
+      85% {
+        bottom: 4.4rem;
+      }
+      90% {
+        bottom: 4.6rem;
+      }
+      95% {
+        bottom: 4.8rem;
+      }
       100% {
-        transform: rotate(-90deg);
-        bottom: -0.5rem;
+        bottom: 5rem;
+      }
+    }
+    @keyframes jump-demo-rotate {
+      0% {
+        transform: rotate(0);
+      }
+      // 50% {
+      //   transform: rotate(180deg);
+      // }
+      100% {
+        transform: rotate(180deg);
       }
     }
   }
