--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -679,7 +679,8 @@
       transform: translate(-50%, -50%);
       width: 40%;
       height: 40rem;
-      background-color: #7c7a7b;
+      // background-color: #7c7a7b;
+      background-color: #fff;
       box-shadow: 2px 2px 5px 0px #1f1f1f;
       .card-title {
         position: absolute;
@@ -746,17 +747,26 @@
       }
       &.ellipse-900 {
         position: absolute;
-        top: -2rem;
-        left: 45%;
-        width: 2rem;
-        height: 125%;
-        background-color: #f5f3f4;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        // width: 2rem;
+        // height: 125%;
+        // background-color: #f5f3f4;
         z-index: 10;
         // border-radius: 50%;
-        transform: rotate(25deg);
+        // transform: rotate(25deg);
         transform-origin: top;
         filter: blur(5px);
-        opacity: 0.6;
+        // opacity: 0.6;
+        background: radial-gradient(
+          ellipse at 200px 120px,
+          transparent 6%,
+          rgba(0, 0, 0, 0.6) 9%
+        )
+        no-repeat;
+        background-size: 100% 100%;
       }
     }
   }
