--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -756,16 +756,11 @@
         // background-color: #f5f3f4;
         z-index: 10;
         // border-radius: 50%;
-        // transform: rotate(25deg);
-        transform-origin: top;
+        transform: rotate(25deg);
+        transform-origin: center;
         filter: blur(5px);
         // opacity: 0.6;
-        background: radial-gradient(
-          ellipse at 200px 120px,
-          transparent 6%,
-          rgba(0, 0, 0, 0.6) 9%
-        )
-        no-repeat;
+        background: radial-gradient(20px 200% ellipse at 50% 50%, transparent 70%, rgba(0, 0, 0, 0.6) 70%) no-repeat;
         background-size: 100% 100%;
       }
     }
