--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -756,12 +756,13 @@
         // background-color: #f5f3f4;
         z-index: 10;
         // border-radius: 50%;
-        transform: rotate(25deg);
+        transform: rotate(-66deg);
         transform-origin: center;
-        filter: blur(5px);
+        filter: blur(15px);
         // opacity: 0.6;
-        background: radial-gradient(20px 200% ellipse at 50% 50%, transparent 70%, rgba(0, 0, 0, 0.6) 70%) no-repeat;
-        background-size: 100% 100%;
+        // background: radial-gradient(20px 200% ellipse at 50% 50%, transparent 70%, rgba(0, 0, 0, 0.6) 70%) no-repeat;
+        background: linear-gradient(transparent 60%, rgba(0, 0, 0, 0.6) 15%);
+        background-size: 100% 18%;
       }
     }
   }
