--- a/themes/oranges/layout/_partial/navigation.ejs
+++ b/themes/oranges/layout/_partial/navigation.ejs
@@ -1,7 +1,7 @@
 <div class="header">
   <div class="avatar">
-    <a href="/"><img no-lazy src="<%- theme.avatar.author_photo %>" alt=""></a>
-    <div class="nickname"><a href="/"><%- theme.avatar.author_nickname %></a></div>
+    <a href="<%- theme.avatar.path %>"><img no-lazy src="<%- theme.avatar.author_photo %>" alt=""></a>
+    <div class="nickname"><a href="<%- theme.avatar.path %>"><%- theme.avatar.author_nickname %></a></div>
   </div>
   <div class="navbar">
     <ul>
