--- a/source/scss/css-animation-design/base.scss
+++ b/source/scss/css-animation-design/base.scss
@@ -1,10 +1,9 @@
 .rotate-demo {
   &.demo-1 {
     display: inline-block;
-    width: 10px;
-    height: 10px;
+    width: 1rem;
+    height: 1rem;
     border-radius: 50%;
-    // background-color: gray;
     box-shadow: 0 -21px 0 0 #a3afb7, 14px -14px 0 0 #a3afb7, 21px 0 0 0 #a3afb7, 14px 14px 0 0 #a3afb7, 0 21px 0 0 #a3afb7, -14px 14px 0 0 #a3afb7, -21px 0 0 0 #a3afb7, -14px -14px 0 0 #a3afb7;
     animation: rotate-demo-1 1.5s infinite ease;
   }
@@ -13,10 +12,27 @@
       transform: rotate(0deg);
     }
     80% {
-      transform: rotate(275deg);
+      transform: rotate(280deg);
     }
     100% {
       transform: rotate(270deg);
+    }
+  }
+  &.demo-2 {
+    display: inline-block;
+    height: 4.5rem;
+    width: 4.5rem;
+    border: 4px solid gray;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    animation: rotate-demo-2 1s infinite linear;
+  }
+  @keyframes rotate-demo-2 {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
     }
   }
 }
