change local images to qiniu cloud images service

--- a/source/scss/something-about-css.scss
+++ b/source/scss/something-about-css.scss
@@ -200,13 +200,13 @@
     transform: scale(.95);
   }
   &.demo-1 {
-    background-image: url("/images/something/css-filter-test1.png");
+    background-image: url("https://qiniu.zcheng.site/something-about-css-css-filter-test1.png");
   }
   &.demo-2 {
-    background-image: url("/images/something/css-filter-test2.png");
+    background-image: url("https://qiniu.zcheng.site/something-about-css-css-filter-test2.png");
   }
   &.demo-3 {
-    background-image: url("/images/something/css-filter-test3.png");
+    background-image: url("https://qiniu.zcheng.site/something-about-css-css-filter-test3.png");
   }
 }
 
@@ -215,7 +215,7 @@
 @mixin acrylic {
   height: 300px;
   width: 100%;
-  background: url("/images/something/acrylic.png") no-repeat center/contain;
+  background: url("https://qiniu.zcheng.site/something-about-css-acrylic.png") no-repeat center/contain;
   background-attachment: fixed;
   display: flex;
   justify-content: center;
@@ -241,7 +241,7 @@
       width: calc(100% + 20px);
       height: calc(100% + 20px);
       z-index: -1;
-      background: url("/images/something/acrylic.png") no-repeat center/contain;
+      background: url("https://qiniu.zcheng.site/something-about-css-acrylic.png") no-repeat center/contain;
       background-attachment: fixed;
     }
     &::after {
@@ -668,7 +668,7 @@
     width: 100%;
     height: 50rem;
     // background-color: #484848;
-    background-image: url("/images/something-about-css/panel-bg.png");
+    background-image: url("https://qiniu.zcheng.site/something-about-css-panel-bg.png");
     border-radius: 10px;
     z-index: 9;
     overflow: hidden;
